--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.6.8",
+    "moment": "^2.30.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-redux": "^9.1.1",
